Fix bug where ScrollToBottom button is hidden behind comments in Safari in iOS17/macOS14

--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -9,6 +9,7 @@
 .Chat .chat-box {
   overflow: auto;
   flex: 1;
+  z-index: 1;
 }
 
 .Chat .chat-box > div {
